data/derived/fa15/progs/unify/prog3109.ml.out
Characters 72-84:
  | h::t -> (i * h) / 10 in
            ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
